--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -178,8 +178,9 @@
     <section class="flex-1 flex flex-col justify-center items-center text-center px-4 py-12">
         <div class="max-w-4xl mx-auto">
             <h2 class="tournament-heading font-extrabold mb-6 text-cvcOrange">
-                <span class="block">VOLLEYBALL</span>
-                <span class="block">TOURNAMENT</span>
+                <img src="logo1.png" />
+                <span class="block">Cincinnati</span>
+                <span class="block">Volleyball Club</span>
             </h2>
             <p class="text-xl md:text-2xl mb-8 text-white">Saturday, May 17, 2025 • 8:00 AM</p>
             <a href="register.html" class="inline-block bg-cvcOrange hover:bg-orange-700 text-white px-8 py-4 rounded-lg text-lg md:text-xl transition shadow-lg transform hover:scale-105">Register Now</a>
@@ -198,7 +199,7 @@
     <!-- Sponsors Section -->
     <section class="py-16 ">
         <div class="container mx-auto px-4 text-center">
-            <h3 class="text-3xl font-bold text-cvcDark mb-12">Our Sponsors</h3>
+            <h3 class="text-3xl font-bold text-cvcOrange mb-12">Our Sponsors</h3>
             <div class="relative max-w-6xl mx-auto overflow-hidden">
                 <div class="py-4">
                     <div id="sponsor-carousel" class="animate-scroll-sponsors">
