--- a/src/main/resources/static/events.html
+++ b/src/main/resources/static/events.html
@@ -57,6 +57,19 @@
         <!-- JS will render events here -->
     </div>
 
+    <!-- Event delete Modal -->
+    <div id="deleteEventModal" class="fixed inset-0 bg-gray-800 bg-opacity-50 flex items-center justify-center hidden">
+        <div class="bg-white p-6 rounded shadow-md">
+            <h3 class="text-xl font-bold text-cvcOrange mb-4">Delete Event</h3>
+            <p>Are you sure you want to delete this event?</p>
+            <div class="flex justify-end mt-4">
+                <button id="cancelDelete" class="bg-gray-300 hover:bg-gray-400 text-gray-800 px-4 py-2 rounded">Cancel</button>
+                <button id="confirmDelete" class="bg-red-500 hover:bg-red-700 text-white px-4 py-2 rounded ml-2">Delete</button>
+            </div>
+            <input type="hidden" id="eventIdToDelete">
+        </div>
+    </div>
+
     <!-- Add New Event -->
     <div class="bg-white border border-cvcOrange p-6 rounded shadow-md">
         <h3 class="text-xl font-bold text-cvcOrange mb-4">📅 Add New Event</h3>
@@ -95,7 +108,199 @@
     &copy; 2025 Cincinnati Volleyball Club. All rights reserved.
 </footer>
 
-<script src="js/events.js"></script>
+<script>
+    // Global variable to store events
+    let events = [];
+    let teams = [];
+    let currentEventIdToDelete = null;
+
+    // DOM elements
+    const eventList = document.getElementById('event-list');
+    const deleteModal = document.getElementById('deleteEventModal');
+    const confirmDeleteBtn = document.getElementById('confirmDelete');
+    const cancelDeleteBtn = document.getElementById('cancelDelete');
+    const eventIdToDeleteInput = document.getElementById('eventIdToDelete');
+    const team1Select = document.getElementById('team1Select');
+    const team2Select = document.getElementById('team2Select');
+
+    // Initialize the page
+    document.addEventListener('DOMContentLoaded', async () => {
+        await fetchTeams(); // Fetch teams first
+        await fetchEvents();
+        setupEventListeners();
+    });
+
+    // Fetch teams from the backend
+    async function fetchTeams() {
+        try {
+            // Replace '/api/teams' with your actual teams endpoint
+            const response = await fetch('/api/teams');
+            if (!response.ok) throw new Error('Failed to fetch teams');
+            teams = await response.json();
+            populateTeamDropdowns();
+        } catch (error) {
+            console.error('Error fetching teams:', error);
+            alert('Failed to load teams. Please try again later.');
+        }
+    }
+
+    // Populate team dropdowns
+    function populateTeamDropdowns() {
+        // Clear existing options (keeping the first default option)
+        team1Select.innerHTML = '<option value="">-- Select Team 1 --</option>';
+        team2Select.innerHTML = '<option value="">-- Select Team 2 --</option>';
+
+        // Add team options
+        teams.forEach(team => {
+            const option1 = document.createElement('option');
+            option1.value = team.id; // or team.name depending on your needs
+            option1.textContent = team.name; // assuming team has a 'name' property
+            team1Select.appendChild(option1);
+
+            const option2 = document.createElement('option');
+            option2.value = team.id; // or team.name depending on your needs
+            option2.textContent = team.name;
+            team2Select.appendChild(option2);
+        });
+    }
+
+    // Fetch events from the backend
+    async function fetchEvents() {
+        try {
+            const response = await fetch('/api/events');
+            if (!response.ok) throw new Error('Failed to fetch events');
+            events = await response.json();
+            renderEvents();
+        } catch (error) {
+            console.error('Error fetching events:', error);
+            alert('Failed to load events. Please try again later.');
+        }
+    }
+
+    // Render events to the DOM
+    function renderEvents() {
+        eventList.innerHTML = '';
+        if (events.length === 0) {
+            eventList.innerHTML = '<p class="text-gray-500 col-span-full text-center">No events found. Add one above!</p>';
+            return;
+        }
+
+        events.forEach(event => {
+            const eventDate = new Date(event.eventDateTime);
+            const formattedDate = eventDate.toLocaleDateString('en-US', {
+                weekday: 'short',
+                month: 'short',
+                day: 'numeric',
+                year: 'numeric'
+            });
+            const formattedTime = eventDate.toLocaleTimeString('en-US', {
+                hour: '2-digit',
+                minute: '2-digit'
+            });
+
+            const eventCard = document.createElement('div');
+            eventCard.className = 'bg-white border border-gray-200 rounded-lg shadow-md overflow-hidden hover:shadow-lg transition';
+            eventCard.innerHTML = `
+                <div class="p-5">
+                    <div class="flex justify-between items-start">
+                        <h3 class="text-xl font-bold text-cvcDark mb-2">${event.eventTitle}</h3>
+                        <button onclick="openDeleteModal(${event.id})" class="text-red-500 hover:text-red-700">
+                            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
+                                <path fill-rule="evenodd" d="M9 2a1 1 0 00-.894.553L7.382 4H4a1 1 0 000 2v10a2 2 0 002 2h8a2 2 0 002-2V6a1 1 0 100-2h-3.382l-.724-1.447A1 1 0 0011 2H9zM7 8a1 1 0 012 0v6a1 1 0 11-2 0V8zm5-1a1 1 0 00-1 1v6a1 1 0 102 0V8a1 1 0 00-1-1z" clip-rule="evenodd" />
+                            </svg>
+                        </button>
+                    </div>
+                    <p class="text-gray-600 mb-2"><span class="font-semibold">Type:</span> ${event.eventType}</p>
+                    <p class="text-gray-600 mb-2"><span class="font-semibold">When:</span> ${formattedDate} at ${formattedTime}</p>
+                    <p class="text-gray-600 mb-2"><span class="font-semibold">Where:</span> ${event.eventLocation}</p>
+                    ${event.eventResult ? `<p class="text-gray-600 mb-2"><span class="font-semibold">Result:</span> ${event.eventResult}</p>` : ''}
+                </div>
+            `;
+            eventList.appendChild(eventCard);
+        });
+    }
+
+    // Submit new event
+    async function submitEvent(e) {
+    e.preventDefault();
+
+    const newEvent = {
+        eventTitle: document.getElementById('eventTitle').value,
+        eventLocation: document.getElementById('eventLocation').value,
+        eventDateTime: document.getElementById('eventDateTime').value,
+        team1Id: document.getElementById('team1Select').value, // Changed to team1Id
+        team2Id: document.getElementById('team2Select').value, // Changed to team2Id
+        eventType: document.getElementById('eventType').value,
+        eventResult: document.getElementById('eventResult').value
+    };
+
+    try {
+        const response = await fetch('/api/events', {
+            method: 'POST',
+            headers: {
+                'Content-Type': 'application/json'
+            },
+            body: JSON.stringify(newEvent)
+        });
+
+        if (!response.ok) throw new Error('Failed to create event');
+
+        // Clear form
+        e.target.reset();
+
+        // Refresh events
+        await fetchEvents();
+    } catch (error) {
+        console.error('Error creating event:', error);
+        alert('Failed to create event. Please try again.');
+    }
+}
+
+    // Delete event
+    async function deleteEvent(id) {
+        try {
+            const response = await fetch(`/api/events/${id}`, {
+                method: 'DELETE'
+            });
+
+            if (!response.ok) throw new Error('Failed to delete event');
+
+            // Refresh events
+            await fetchEvents();
+        } catch (error) {
+            console.error('Error deleting event:', error);
+            alert('Failed to delete event. Please try again.');
+        }
+    }
+
+    // Open delete confirmation modal
+    function openDeleteModal(id) {
+        currentEventIdToDelete = id;
+        eventIdToDeleteInput.value = id;
+        deleteModal.classList.remove('hidden');
+    }
+
+    // Close delete confirmation modal
+    function closeDeleteModal() {
+        currentEventIdToDelete = null;
+        deleteModal.classList.add('hidden');
+    }
+
+    // Setup event listeners
+    function setupEventListeners() {
+        confirmDeleteBtn.addEventListener('click', async () => {
+            if (currentEventIdToDelete) {
+                await deleteEvent(currentEventIdToDelete);
+                closeDeleteModal();
+            }
+        });
+
+        cancelDeleteBtn.addEventListener('click', closeDeleteModal);
+    }
+
+    // Make openDeleteModal available globally
+    window.openDeleteModal = openDeleteModal;
+</script>
 
 <!-- Mobile Menu Toggle Script -->
 <script>
