--- a/src/main/resources/static/contact.html
+++ b/src/main/resources/static/contact.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Contact Us | Cincinnati Volleyball Club</title>
+    <title>About & Contact | Cincinnati Volleyball Club</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
         tailwind.config = {
@@ -12,62 +12,87 @@
               colors: {
                 cvcOrange: '#f26522',
                 cvcDark: '#111111',
+                cvcLight: '#f8f8f8',
               }
             }
           }
         }
     </script>
 </head>
-<body class="bg-white text-gray-800 font-sans">
+<body class="bg-cvcLight text-gray-800 font-sans">
 
 <!-- Header -->
 <header class="bg-cvcDark text-white sticky top-0 z-50 shadow-md">
     <div class="container mx-auto px-4 py-4 flex justify-between items-center">
-        <h1 class="text-2xl font-bold text-cvcOrange">🏐 Contact CVC</h1>
-        <nav class="space-x-4">
+        <h1 class="text-2xl font-bold text-cvcOrange">🏐 CVC</h1>
+        <nav class="space-x-4 hidden md:flex">
             <a href="index.html" class="hover:text-cvcOrange">Home</a>
-            <a href="teams.html" class="hover:text-cvcOrange">Teams</a>
-            <a href="players.html" class="hover:text-cvcOrange">Players</a>
             <a href="events.html" class="hover:text-cvcOrange">Events</a>
-            <a href="contact.html" class="text-cvcOrange font-bold underline">Contact</a>
+            <a href="#" class="text-cvcOrange font-semibold">About & Contact</a>
         </nav>
+        <div class="md:hidden">
+            <button id="menu-toggle" class="text-cvcOrange text-xl">☰</button>
+        </div>
+    </div>
+    <div id="mobile-menu" class="mobile-menu hidden bg-cvcDark text-white px-4 py-2">
+        <a href="index.html" class="block py-2">Home</a>
+        <a href="events.html" class="block py-2">Events</a>
+        <a href="#" class="block py-2">About & Contact</a>
     </div>
 </header>
 
-<!-- Contact Hero -->
-<section class="bg-cvcOrange text-white py-12 text-center">
-    <h2 class="text-3xl font-bold mb-2">We’d love to hear from you!</h2>
-    <p class="text-lg">Reach out to us for questions, partnerships, or event info.</p>
+<!-- About Section -->
+<section class="container mx-auto px-4 py-12 max-w-5xl">
+    <h2 class="text-4xl font-bold text-center text-cvcOrange mb-6">About Cincinnati Volleyball Club</h2>
+    <p class="text-lg text-gray-700 leading-relaxed mb-6">
+        Cincinnati Volleyball Club (CVC) is a passionate community of volleyball enthusiasts located in the heart of Ohio. Established to promote competitive and recreational volleyball, CVC offers a platform for players of all skill levels to connect, grow, and compete.
+    </p>
+    <p class="text-lg text-gray-700 leading-relaxed mb-6">
+        Our club organizes seasonal tournaments, weekend matches, training sessions, and community events designed to encourage team spirit, athletic development, and healthy living. Whether you're a seasoned player or just starting out, CVC is your home to spike, set, and soar!
+    </p>
+    <p class="text-lg text-gray-700 leading-relaxed mb-6">
+        Join us for exciting events, build friendships on and off the court, and be a part of a growing family united by a love for volleyball. 🏐
+    </p>
 </section>
 
-<!-- Contact Form -->
-<main class="container mx-auto px-4 py-16 max-w-2xl">
-    <form id="contactForm" class="bg-white p-6 border border-cvcOrange rounded-lg shadow space-y-4">
-        <input type="text" id="name" placeholder="Your Name" required class="w-full border px-4 py-2 rounded" />
-        <div id="nameError" class="text-red-500 text-sm hidden">Please enter your name.</div>
+<!-- Contact Section -->
+<section class="bg-white py-12" id="contact">
+    <div class="container mx-auto px-4 max-w-2xl">
+        <h2 class="text-3xl font-bold text-center text-cvcOrange mb-6">📩 Contact Us</h2>
+        <form id="contactForm" class="bg-white p-6 border border-cvcOrange rounded-lg shadow space-y-4">
+            <input type="text" id="name" placeholder="Your Name" required class="w-full border px-4 py-2 rounded" />
+            <div id="nameError" class="text-red-500 text-sm hidden">Please enter your name.</div>
 
-        <input type="email" id="email" placeholder="Email Address" required class="w-full border px-4 py-2 rounded" />
-        <div id="emailError" class="text-red-500 text-sm hidden">Please enter a valid email address.</div>
+            <input type="email" id="email" placeholder="Email Address" required class="w-full border px-4 py-2 rounded" />
+            <div id="emailError" class="text-red-500 text-sm hidden">Please enter a valid email address.</div>
 
-        <input type="tel" id="phone" placeholder="Phone Number" class="w-full border px-4 py-2 rounded" />
-        <div id="phoneError" class="text-red-500 text-sm hidden">Please enter a valid phone number.</div>
+            <input type="tel" id="phone" placeholder="Phone Number" class="w-full border px-4 py-2 rounded" />
+            <div id="phoneError" class="text-red-500 text-sm hidden">Please enter a valid phone number.</div>
 
-        <textarea id="message" placeholder="Your Message" rows="4" required class="w-full border px-4 py-2 rounded"></textarea>
-        <div id="messageError" class="text-red-500 text-sm hidden">Please enter your message.</div>
+            <textarea id="message" placeholder="Your Message" rows="4" required class="w-full border px-4 py-2 rounded"></textarea>
+            <div id="messageError" class="text-red-500 text-sm hidden">Please enter your message.</div>
 
-        <button type="submit" class="bg-cvcOrange text-white px-6 py-2 rounded hover:bg-orange-700 transition w-full font-semibold">Send Message</button>
-    </form>
+            <button type="submit" class="bg-cvcOrange text-white px-6 py-2 rounded hover:bg-orange-700 transition w-full font-semibold">Send Message</button>
+        </form>
 
-    <p id="successMsg" class="text-green-600 text-center mt-4 hidden">✅ Thank you! We’ll contact you soon.</p>
-</main>
+        <p id="successMsg" class="text-green-600 text-center mt-4 hidden">✅ Thank you! We’ll contact you soon.</p>
+    </div>
+</section>
 
 <!-- Footer -->
-<footer class="bg-cvcDark text-white text-center py-6 text-sm">
+<footer class="bg-cvcDark text-white text-center py-6 mt-10 text-sm">
     &copy; 2025 Cincinnati Volleyball Club. All rights reserved.
 </footer>
 
-<!-- JS Submit Handler -->
+<!-- Scripts -->
 <script>
+    const menuToggle = document.getElementById("menu-toggle");
+    const mobileMenu = document.getElementById("mobile-menu");
+
+    menuToggle.addEventListener("click", () => {
+      mobileMenu.classList.toggle("hidden");
+    });
+
     const form = document.getElementById("contactForm");
     const successMsg = document.getElementById("successMsg");
     const nameField = document.getElementById("name");
@@ -85,32 +110,27 @@
 
       let isValid = true;
 
-      // Clear previous error messages
       nameError.classList.add("hidden");
       emailError.classList.add("hidden");
       phoneError.classList.add("hidden");
       messageError.classList.add("hidden");
 
-      // Name validation
       if (!nameField.value) {
         nameError.classList.remove("hidden");
         isValid = false;
       }
 
-      // Email validation
-      const emailRegex = /^[a-zA-Z0-9._-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,6}$/;
+      const emailRegex = /^[^@\s]+@[^@\s]+\.[^@\s]+$/;
       if (!emailField.value || !emailRegex.test(emailField.value)) {
         emailError.classList.remove("hidden");
         isValid = false;
       }
 
-      // Phone validation (optional)
       if (phoneField.value && !/^\+?[0-9]{10,15}$/.test(phoneField.value)) {
         phoneError.classList.remove("hidden");
         isValid = false;
       }
 
-      // Message validation
       if (!messageField.value) {
         messageError.classList.remove("hidden");
         isValid = false;
