--- a/src/main/resources/static/contact.html
+++ b/src/main/resources/static/contact.html
@@ -24,7 +24,12 @@
 <!-- Header -->
 <header class="bg-cvcDark text-white sticky top-0 z-50 shadow-md">
     <div class="container mx-auto px-4 py-4 flex justify-between items-center">
-        <h1 class="text-2xl font-bold text-cvcOrange">🏐 CVC</h1>
+        <div class="flex items-center space-x-2">
+            <a href="index.html" class="flex items-center">
+                <img src="logo.png" alt="Cincinnati Volleyball Club" class="h-10 hover:opacity-90 transition" />
+                <span class="text-xl font-bold text-cvcOrange">Cincinnati Volleyball Club</span>
+            </a>
+        </div>
         <nav class="space-x-4 hidden md:flex">
             <a href="index.html" class="hover:text-cvcOrange">Home</a>
             <a href="events.html" class="hover:text-cvcOrange">Events</a>
