--- a/src/main/resources/static/contact.html
+++ b/src/main/resources/static/contact.html
@@ -18,6 +18,14 @@
           }
         }
     </script>
+    <style>
+        .mobile-menu {
+            display: none;
+        }
+        .mobile-menu.active {
+            display: block;
+        }
+    </style>
 </head>
 <body class="bg-cvcLight text-gray-800 font-sans">
 
@@ -42,7 +50,7 @@
     <div id="mobile-menu" class="mobile-menu hidden bg-cvcDark text-white px-4 py-2">
         <a href="index.html" class="block py-2">Home</a>
         <a href="events.html" class="block py-2">Events</a>
-        <a href="#" class="block py-2">About & Contact</a>
+        <a href="#" class="block py-2 text-cvcOrange">About & Contact</a>
     </div>
 </header>
 
@@ -53,34 +61,55 @@
         Cincinnati Volleyball Club (CVC) is a passionate community of volleyball enthusiasts located in the heart of Ohio. Established to promote competitive and recreational volleyball, CVC offers a platform for players of all skill levels to connect, grow, and compete.
     </p>
     <p class="text-lg text-gray-700 leading-relaxed mb-6">
-        Our club organizes seasonal tournaments, weekend matches, training sessions, and community events designed to encourage team spirit, athletic development, and healthy living. Whether you're a seasoned player or just starting out, CVC is your home to spike, set, and soar!
+        We proudly host the <strong>17th Annual Volleyball Tournament</strong> and <strong>5th Annual Golf Tournament</strong> in 2025, bringing together over 50 teams and approximately 600 participants from major Mid-Western cities including Columbus, Cleveland, Chicago, Indianapolis, Detroit, Nashville, Louisville, Lexington, Memphis, and Atlanta.
     </p>
     <p class="text-lg text-gray-700 leading-relaxed mb-6">
-        Join us for exciting events, build friendships on and off the court, and be a part of a growing family united by a love for volleyball. 🏐
+        Our events provide excellent sponsorship opportunities for businesses looking to engage with the community and market to a targeted audience of hotel owners and sports enthusiasts.
     </p>
 </section>
 
 <!-- Contact Section -->
-<section class="bg-white py-12" id="contact">
-    <div class="container mx-auto px-4 max-w-2xl">
-        <h2 class="text-3xl font-bold text-center text-cvcOrange mb-6">📩 Contact Us</h2>
-        <form id="contactForm" class="bg-white p-6 border border-cvcOrange rounded-lg shadow space-y-4">
-            <input type="text" id="name" placeholder="Your Name" required class="w-full border px-4 py-2 rounded" />
-            <div id="nameError" class="text-red-500 text-sm hidden">Please enter your name.</div>
+<section id="contact" class="bg-white rounded-xl shadow-lg p-8 mb-16 container mx-auto max-w-6xl">
+    <h2 class="text-3xl font-bold mb-8 text-center text-cvcDark">Contact Us</h2>
 
-            <input type="email" id="email" placeholder="Email Address" required class="w-full border px-4 py-2 rounded" />
-            <div id="emailError" class="text-red-500 text-sm hidden">Please enter a valid email address.</div>
+    <div class="max-w-4xl mx-auto">
+        <div class="grid md:grid-cols-2 gap-8">
+            <div>
+                <h3 class="text-xl font-semibold mb-4 text-cvcOrange">Sponsorship Inquiries</h3>
+                <p class="mb-4">Thank you for supporting our club's events. For more information, please contact the Cincinnati Volleyball Committee:</p>
+                <p class="mb-2"><strong>Email:</strong> <a href="mailto:cincyvolleyballclub@gmail.com" class="text-cvcOrange hover:underline">cincyvolleyballclub@gmail.com</a></p>
+                <p class="mb-4"><strong>Payment:</strong> Please make check payable to: Cincinnati Volleyball Club</p>
+                <p><strong>Mailing Address:</strong><br>Rakesh Patel<br>8151 Vegas Ct.<br>West Chester, OH 45069</p>
 
-            <input type="tel" id="phone" placeholder="Phone Number" class="w-full border px-4 py-2 rounded" />
-            <div id="phoneError" class="text-red-500 text-sm hidden">Please enter a valid phone number.</div>
+                <div class="mt-8">
+                    <h3 class="text-xl font-semibold mb-4 text-cvcOrange">Special 2025 Incentive</h3>
+                    <p class="mb-2">Sponsors contributing $3,000+ will automatically receive a spot as a sponsor at the Annual Golf Tournament at no additional cost!</p>
+                </div>
+            </div>
 
-            <textarea id="message" placeholder="Your Message" rows="4" required class="w-full border px-4 py-2 rounded"></textarea>
-            <div id="messageError" class="text-red-500 text-sm hidden">Please enter your message.</div>
+            <div>
+                <h3 class="text-xl font-semibold mb-4 text-cvcOrange">Committee Members</h3>
+                <ul class="space-y-2">
+                    <li><strong>Rocky:</strong> 513-348-0990</li>
+                    <li><strong>Dixit:</strong> 859-814-9914</li>
+                    <li><strong>Bhavesh:</strong> 513-349-3913</li>
+                    <li><strong>Snehal:</strong> 513-633-6071</li>
+                    <li><strong>Snehal (Tino):</strong> 361-231-5000</li>
+                    <li><strong>Bhavin:</strong> 937-537-3300</li>
+                    <li><strong>Robin:</strong> 513-226-7344</li>
+                </ul>
 
-            <button type="submit" class="bg-cvcOrange text-white px-6 py-2 rounded hover:bg-orange-700 transition w-full font-semibold">Send Message</button>
-        </form>
-
-        <p id="successMsg" class="text-green-600 text-center mt-4 hidden">✅ Thank you! We’ll contact you soon.</p>
+                <div class="mt-8">
+                    <h3 class="text-xl font-semibold mb-4 text-cvcOrange">Upcoming Events</h3>
+                    <p class="mb-2"><strong>17th CVC Volleyball Tournament:</strong><br>
+                        May 16-17, 2025<br>
+                        Sports Express, Mason, OH</p>
+                    <p class="mb-2"><strong>5th CVC Golf Tournament:</strong><br>
+                        June 28-29, 2025<br>
+                        Glennview Golf Course, Cincinnati, OH</p>
+                </div>
+            </div>
+        </div>
     </div>
 </section>
 
@@ -96,77 +125,6 @@
 
     menuToggle.addEventListener("click", () => {
       mobileMenu.classList.toggle("hidden");
-    });
-
-    const form = document.getElementById("contactForm");
-    const successMsg = document.getElementById("successMsg");
-    const nameField = document.getElementById("name");
-    const emailField = document.getElementById("email");
-    const phoneField = document.getElementById("phone");
-    const messageField = document.getElementById("message");
-
-    const nameError = document.getElementById("nameError");
-    const emailError = document.getElementById("emailError");
-    const phoneError = document.getElementById("phoneError");
-    const messageError = document.getElementById("messageError");
-
-    form.addEventListener("submit", async (e) => {
-      e.preventDefault();
-
-      let isValid = true;
-
-      nameError.classList.add("hidden");
-      emailError.classList.add("hidden");
-      phoneError.classList.add("hidden");
-      messageError.classList.add("hidden");
-
-      if (!nameField.value) {
-        nameError.classList.remove("hidden");
-        isValid = false;
-      }
-
-      const emailRegex = /^[^@\s]+@[^@\s]+\.[^@\s]+$/;
-      if (!emailField.value || !emailRegex.test(emailField.value)) {
-        emailError.classList.remove("hidden");
-        isValid = false;
-      }
-
-      if (phoneField.value && !/^\+?[0-9]{10,15}$/.test(phoneField.value)) {
-        phoneError.classList.remove("hidden");
-        isValid = false;
-      }
-
-      if (!messageField.value) {
-        messageError.classList.remove("hidden");
-        isValid = false;
-      }
-
-      if (!isValid) return;
-
-      const payload = {
-        name: nameField.value,
-        email: emailField.value,
-        phone: phoneField.value,
-        message: messageField.value,
-      };
-
-      try {
-        const response = await fetch("/api/contact/send", {
-          method: "POST",
-          headers: { "Content-Type": "application/json" },
-          body: JSON.stringify(payload),
-        });
-
-        if (response.ok) {
-          form.reset();
-          successMsg.classList.remove("hidden");
-        } else {
-          alert("Something went wrong. Please try again.");
-        }
-      } catch (err) {
-        console.error(err);
-        alert("Server error. Please try again later.");
-      }
     });
 </script>
 
